added Stackelberg attacker

--- a/Example.ipynb
+++ b/Example.ipynb
@@ -19,21 +19,29 @@
    },
    "outputs": [],
    "source": [
-    "g = Game(((1, 1), (2, 2), (3, 3)), 3)\n",
-    "d = Player(g, 0, 1)\n",
-    "a = Player(g, 1, 1)\n",
-    "g.players[0] = d\n",
-    "g.players[1] = a"
+    "from player import *"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "let's initialize a game with a Stackelberg attacker and a Uniform defender"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
+    "g = Game(((1, 1), (2, 2), (3, 3)), 10)\n",
+    "d = Player(g, 0, 1)\n",
+    "a = StackelbergAttacker(g, 1, 1)\n",
+    "g.players[0] = d\n",
+    "g.players[1] = a\n",
     "g.defenders.append(0)\n",
     "g.attackers.append(1)"
    ]
@@ -42,12 +50,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "we can now play a game"
+    "we can now play the game"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -65,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -73,16 +81,66 @@
     {
      "data": {
       "text/plain": [
-       "[{0: [1], 1: [0]}, {0: [1], 1: [2]}, {0: [0], 1: [0]}]"
+       "[{0: [1], 1: [2]},\n",
+       " {0: [2], 1: [2]},\n",
+       " {0: [1], 1: [2]},\n",
+       " {0: [1], 1: [2]},\n",
+       " {0: [1], 1: [2]},\n",
+       " {0: [2], 1: [2]},\n",
+       " {0: [2], 1: [2]},\n",
+       " {0: [0], 1: [2]},\n",
+       " {0: [2], 1: [2]},\n",
+       " {0: [1], 1: [2]}]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "g.history"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{0: [0.3333333333333333, 0.3333333333333333, 0.3333333333333333],\n",
+       "  1: [0, 0, 1]},\n",
+       " {0: [0.3333333333333333, 0.3333333333333333, 0.3333333333333333],\n",
+       "  1: [0, 0, 1]},\n",
+       " {0: [0.3333333333333333, 0.3333333333333333, 0.3333333333333333],\n",
+       "  1: [0, 0, 1]},\n",
+       " {0: [0.3333333333333333, 0.3333333333333333, 0.3333333333333333],\n",
+       "  1: [0, 0, 1]},\n",
+       " {0: [0.3333333333333333, 0.3333333333333333, 0.3333333333333333],\n",
+       "  1: [0, 0, 1]},\n",
+       " {0: [0.3333333333333333, 0.3333333333333333, 0.3333333333333333],\n",
+       "  1: [0, 0, 1]},\n",
+       " {0: [0.3333333333333333, 0.3333333333333333, 0.3333333333333333],\n",
+       "  1: [0, 0, 1]},\n",
+       " {0: [0.3333333333333333, 0.3333333333333333, 0.3333333333333333],\n",
+       "  1: [0, 0, 1]},\n",
+       " {0: [0.3333333333333333, 0.3333333333333333, 0.3333333333333333],\n",
+       "  1: [0, 0, 1]},\n",
+       " {0: [0.3333333333333333, 0.3333333333333333, 0.3333333333333333],\n",
+       "  1: [0, 0, 1]}]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g.strategy_history"
    ]
   },
   {
@@ -94,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -102,32 +160,10 @@
     {
      "data": {
       "text/plain": [
-       "[-1, -3, 0]"
+       "[-3, 0, -3, -3, -3, 0, 0, -3, 0, -3]"
       ]
      },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "list(map(lambda m: g.get_player_payoff(0,m), g.history))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[-1, -3, 0]"
-      ]
-     },
-     "execution_count": 7,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
