example updated with environment

--- a/Example.ipynb
+++ b/Example.ipynb
@@ -2,24 +2,90 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "from game import *"
+    "import game"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from importlib import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "from player import *"
+    "import player"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import environment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'game' from '/home/lorenzo/Scrivania/Polimi/Thesis/code/onlineSG/game.py'>"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reload(game)"
    ]
   },
   {
@@ -31,19 +97,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 56,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "g = Game(((1, 1), (2, 2), (3, 3)), 10)\n",
-    "d = Player(g, 0, 1)\n",
-    "a = StackelbergAttacker(g, 1, 1)\n",
+    "g = game.Game(((1, 1), (2, 2), (3, 3)), 10)\n",
+    "d = player.Defender(g, 0, 1)\n",
+    "a = player.StackelbergAttacker(g, 1, 1)\n",
     "g.players[0] = d\n",
     "g.players[1] = a\n",
     "g.defenders.append(0)\n",
-    "g.attackers.append(1)"
+    "g.attackers.append(1)\n",
+    "e = environment.Environment(g, 0)\n",
+    "agent = d"
    ]
   },
   {
@@ -55,13 +123,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 57,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "g.play_game()"
+    "for t in range(g.time_horizon):\n",
+    "    strategy = agent.compute_strategy()\n",
+    "    e.observe_strategy(strategy)\n",
+    "    realization = agent.sample_strategy()\n",
+    "    e.observe_realization(realization)\n",
+    "    feedback = e.feedback(\"expert\")\n",
+    "    agent.receive_feedback(feedback)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{0: 0, 1: 0, 2: 0},\n",
+       " {0: 0, 1: 0, 2: -3},\n",
+       " {0: 0, 1: 0, 2: -3},\n",
+       " {0: 0, 1: 0, 2: 0},\n",
+       " {0: 0, 1: 0, 2: -3},\n",
+       " {0: 0, 1: 0, 2: -3},\n",
+       " {0: 0, 1: 0, 2: -3},\n",
+       " {0: 0, 1: 0, 2: 0},\n",
+       " {0: 0, 1: 0, 2: -3},\n",
+       " {0: 0, 1: 0, 2: -3}]"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "agent.feedbacks"
    ]
   },
   {
@@ -73,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -82,18 +187,18 @@
      "data": {
       "text/plain": [
        "[{0: [1], 1: [2]},\n",
-       " {0: [2], 1: [2]},\n",
+       " {0: [0], 1: [2]},\n",
        " {0: [1], 1: [2]},\n",
-       " {0: [1], 1: [2]},\n",
-       " {0: [1], 1: [2]},\n",
+       " {0: [0], 1: [2]},\n",
        " {0: [2], 1: [2]},\n",
        " {0: [2], 1: [2]},\n",
        " {0: [0], 1: [2]},\n",
-       " {0: [2], 1: [2]},\n",
-       " {0: [1], 1: [2]}]"
+       " {0: [1], 1: [2]},\n",
+       " {0: [1], 1: [2]},\n",
+       " {0: [2], 1: [2]}]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -134,42 +239,13 @@
        "  1: [0, 0, 1]}]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "g.strategy_history"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "and if we want to know the rewards of player 0 (the defender)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[-3, 0, -3, -3, -3, 0, 0, -3, 0, -3]"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "d.get_rewards()"
    ]
   }
  ],
