--- a/Example.ipynb
+++ b/Example.ipynb
@@ -2,90 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 71,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "import game"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
+    "import game\n",
+    "import player\n",
+    "import environment\n",
+    "import parsers\n",
+    "import runner\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
     "from importlib import *"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import player"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "import environment"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<module 'game' from '/home/lorenzo/Scrivania/Polimi/Thesis/code/onlineSG/game.py'>"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "reload(game)"
    ]
   },
   {
@@ -97,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 221,
    "metadata": {
     "collapsed": false
    },
@@ -123,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -140,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -148,19 +78,19 @@
     {
      "data": {
       "text/plain": [
-       "[{0: 0, 1: 0, 2: 0},\n",
-       " {0: 0, 1: 0, 2: -3},\n",
-       " {0: 0, 1: 0, 2: -3},\n",
-       " {0: 0, 1: 0, 2: 0},\n",
-       " {0: 0, 1: 0, 2: -3},\n",
-       " {0: 0, 1: 0, 2: -3},\n",
+       "[{0: 0, 1: 0, 2: -3},\n",
        " {0: 0, 1: 0, 2: -3},\n",
        " {0: 0, 1: 0, 2: 0},\n",
+       " {0: 0, 1: 0, 2: 0},\n",
+       " {0: 0, 1: 0, 2: 0},\n",
+       " {0: 0, 1: 0, 2: 0},\n",
+       " {0: 0, 1: 0, 2: 0},\n",
+       " {0: 0, 1: 0, 2: -3},\n",
        " {0: 0, 1: 0, 2: -3},\n",
        " {0: 0, 1: 0, 2: -3}]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -186,19 +116,19 @@
     {
      "data": {
       "text/plain": [
-       "[{0: [1], 1: [2]},\n",
-       " {0: [0], 1: [2]},\n",
-       " {0: [1], 1: [2]},\n",
+       "[{0: [0], 1: [2]},\n",
        " {0: [0], 1: [2]},\n",
        " {0: [2], 1: [2]},\n",
        " {0: [2], 1: [2]},\n",
+       " {0: [2], 1: [2]},\n",
+       " {0: [2], 1: [2]},\n",
+       " {0: [2], 1: [2]},\n",
        " {0: [0], 1: [2]},\n",
-       " {0: [1], 1: [2]},\n",
-       " {0: [1], 1: [2]},\n",
-       " {0: [2], 1: [2]}]"
+       " {0: [0], 1: [2]},\n",
+       " {0: [0], 1: [2]}]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -239,13 +169,250 @@
        "  1: [0, 0, 1]}]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "g.strategy_history"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Configuration Files\n",
+    "\n",
+    "we can also set a configuration file as below"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"conf.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>T</th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>Defender</th>\n",
+       "      <th>Attacker</th>\n",
+       "      <th>Attacker.1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>player</td>\n",
+       "      <td>player</td>\n",
+       "      <td>stackelberg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>player</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>stackelberg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>player</td>\n",
+       "      <td>stackelberg</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>12</td>\n",
+       "      <td>13</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>player</td>\n",
+       "      <td>player</td>\n",
+       "      <td>stackelberg</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   T  0   1   2  3  4 Defender     Attacker   Attacker.1\n",
+       "0  5  2   1   3  1  1   player       player  stackelberg\n",
+       "1  3  1   1   1  1  1   player          NaN  stackelberg\n",
+       "2  6  1   3   1  2  1   player  stackelberg          NaN\n",
+       "3  5  1  12  13  1  1   player       player  stackelberg"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "mypath = \"/home/lorenzo/Scrivania/Polimi/Thesis/code/onlineSG/games\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "and use the *Runner* class to run all the configuration files in a folder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "r = runner.Runner(mypath)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "r.run()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{0: 0, 1: 0, 2: 0, 3: 0, 4: -1},\n",
+       " {0: -2, 1: 0, 2: 0, 3: 0, 4: 0},\n",
+       " {0: 0, 1: 0, 2: -3, 3: -1, 4: 0},\n",
+       " {0: 0, 1: -1, 2: 0, 3: 0, 4: -1},\n",
+       " {0: 0, 1: 0, 2: 0, 3: 0, 4: -1}]"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r.batches[0].interactions[0].agent.feedbacks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{0: 0, 1: 0, 2: 0, 3: 0, 4: -1},\n",
+       " {0: -1, 1: 0, 2: 0, 3: 0, 4: 0},\n",
+       " {0: -1, 1: 0, 2: 0, 3: 0, 4: 0},\n",
+       " {0: 0, 1: 0, 2: -1, 3: 0, 4: 0},\n",
+       " {0: 0, 1: 0, 2: 0, 3: 0, 4: -1},\n",
+       " {0: 0, 1: 0, 2: 0, 3: 0, 4: 0}]"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r.batches[0].interactions[2].agent.feedbacks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'environment' from '/home/lorenzo/Scrivania/Polimi/Thesis/code/onlineSG/environment.py'>"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# if you change something, don't forget to reload\n",
+    "\n",
+    "reload(player)\n",
+    "reload(parsers)\n",
+    "reload(game)\n",
+    "reload(environment)\n",
+    "reload(runner)"
    ]
   }
  ],
