--- a/notebooks/Example.ipynb
+++ b/notebooks/Example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -32,6 +32,108 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from copy import deepcopy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "values = ((1, 1), (2, 2), (3, 3))\n",
+    "time_horizon = 10\n",
+    "g = game.Game(values, time_horizon)\n",
+    "agent = player.Defender(g, 0, 1)\n",
+    "attacker = player.StackelbergAttacker(g, 1, 1)\n",
+    "g.set_players([agent], [attacker])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "exp = runner.Experiment(g)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "exp.run()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 191,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.18605144060299794"
+      ]
+     },
+     "execution_count": 191,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "exp.seed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{0: [2], 1: [2]},\n",
+       " {0: [1], 1: [2]},\n",
+       " {0: [2], 1: [2]},\n",
+       " {0: [0], 1: [2]},\n",
+       " {0: [1], 1: [2]},\n",
+       " {0: [0], 1: [2]},\n",
+       " {0: [0], 1: [2]},\n",
+       " {0: [2], 1: [2]},\n",
+       " {0: [1], 1: [2]},\n",
+       " {0: [2], 1: [2]}]"
+      ]
+     },
+     "execution_count": 151,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g.history"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -42,13 +144,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 39,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "mypath = \"/home/lorenzo/Scrivania/Polimi/Thesis/code/onlineSG/games\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 192,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "resultspath = \"/home/lorenzo/Scrivania/Polimi/Thesis/code/onlineSG/results\""
    ]
   },
   {
@@ -60,18 +173,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 385,
+   "execution_count": 196,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "r = runner.Runner(mypath)"
+    "r = runner.Runner(mypath, resultspath)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 386,
+   "execution_count": 197,
    "metadata": {
     "collapsed": false
    },
@@ -82,113 +195,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 387,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[experiment(environment=<Environment>, agent=<Defender id:0 resources:1>, game=<Game values:[[1, 7, 1], [1, 1, 12], [12, 1, 1], [1, 1, 2], [2, 2, 3]] time_horizon:5>),\n",
-       " experiment(environment=<Environment>, agent=<Defender id:0 resources:1>, game=<Game values:[[1.0, 1.0], [1.0, 1.0], [1.0, 1.0], [1.0, 1.0], [1.0, 1.0]] time_horizon:3>),\n",
-       " experiment(environment=<Environment>, agent=<StUDefender id:0 resources:1>, game=<Game values:[[1.0, 1.0], [3.0, 3.0], [1.0, 1.0], [2.0, 2.0], [1.0, 1.0]] time_horizon:6>),\n",
-       " experiment(environment=<Environment>, agent=<Defender id:0 resources:1>, game=<Game values:[[1.0, 1.0, 1.0], [12.0, 12.0, 12.0], [13.0, 13.0, 13.0], [1.0, 1.0, 1.0], [1.0, 1.0, 1.0]] time_horizon:5>)]"
-      ]
-     },
-     "execution_count": 387,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "r.batches[0].experiments"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 389,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{0: [0, 1, 0, 0, 0], 1: [0, 0, 0, 1, 0]},\n",
-       " {0: [0.0, 0.6, 0.0, 0.4, 0.0], 1: [0, 1, 0, 0, 0]},\n",
-       " {0: [0.0, 0.6, 0.0, 0.4, 0.0], 1: [0, 1, 0, 0, 0]},\n",
-       " {0: [0.0, 0.6, 0.0, 0.4, 0.0], 1: [0, 1, 0, 0, 0]},\n",
-       " {0: [0.0, 0.6, 0.0, 0.4, 0.0], 1: [0, 1, 0, 0, 0]},\n",
-       " {0: [0.0, 0.6, 0.0, 0.4, 0.0], 1: [0, 1, 0, 0, 0]}]"
-      ]
-     },
-     "execution_count": 389,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "r.batches[0].experiments[2].game.strategy_history"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 388,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{0: -0.0, 1: -0.0, 2: -0.0, 3: -2.0, 4: -0.0},\n",
-       " {0: -0.0, 1: -3.0, 2: -0.0, 3: -0.0, 4: -0.0},\n",
-       " {0: -0.0, 1: -0.0, 2: -0.0, 3: -0.0, 4: -0.0},\n",
-       " {0: -0.0, 1: -0.0, 2: -0.0, 3: -0.0, 4: -0.0},\n",
-       " {0: -0.0, 1: -0.0, 2: -0.0, 3: -0.0, 4: -0.0},\n",
-       " {0: -0.0, 1: -3.0, 2: -0.0, 3: -0.0, 4: -0.0}]"
-      ]
-     },
-     "execution_count": 388,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "r.batches[0].experiments[2].agent.feedbacks"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 390,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{0: [1], 1: [3]},\n",
-       " {0: [3], 1: [1]},\n",
-       " {0: [1], 1: [1]},\n",
-       " {0: [1], 1: [1]},\n",
-       " {0: [1], 1: [1]},\n",
-       " {0: [3], 1: [1]}]"
-      ]
-     },
-     "execution_count": 390,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "r.batches[0].experiments[2].game.history"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 382,
+   "execution_count": 195,
    "metadata": {
     "collapsed": false
    },
@@ -196,88 +236,33 @@
     {
      "data": {
       "text/plain": [
-       "<module 'source.runner' from '../source/runner.py'>"
+       "<module 'source.environment' from '../source/environment.py'>"
       ]
      },
-     "execution_count": 382,
+     "execution_count": 195,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# if you change something in the files, don't forget to reload\n",
+    "\n",
     "reload(errors)\n",
+    "reload(runner)\n",
     "reload(player)\n",
     "reload(parsers)\n",
     "reload(game)\n",
-    "reload(environment)\n",
-    "reload(runner)\n"
+    "reload(environment)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 391,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "import random"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 444,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.13013363010328816\n"
-     ]
-    }
-   ],
-   "source": [
-    "random.seed()\n",
-    "seed = random.random()\n",
-    "print(seed)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 455,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "random.seed(seed)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 459,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.5510505440806545"
-      ]
-     },
-     "execution_count": 459,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "random.random()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
