completed results printing, added serialization with pickle and JSON, added scripts

--- a/notebooks/Example.ipynb
+++ b/notebooks/Example.ipynb
@@ -9,12 +9,17 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append('../')"
+    "# sys.path.append('../')  # uncomment to add the path to the onlineSG folder \n",
+    "# You have to change the path if you move this file.\n",
+    "# Alternatevely add the onlineSG folder to your PYTHONPATH\n",
+    "# e.g. On Linux add this line on .bashrc:\n",
+    "# export PYTHONPATH=\"<absolute-path-to-onlineSG>:PYTHONPATH\"\n",
+    "# then you can use onlineSG library from everywhere"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -23,7 +28,6 @@
     "import source.game as game\n",
     "import source.player as player\n",
     "import source.environment as environment\n",
-    "import source.parsers as parsers\n",
     "import source.runner as runner\n",
     "import source.errors as errors\n",
     "import numpy as np\n",
@@ -32,19 +36,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "from copy import deepcopy"
+    "initialize a Game"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 92,
    "metadata": {
     "collapsed": true
    },
@@ -59,8 +59,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "and create an *Experiment*"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 81,
    "metadata": {
     "collapsed": false
    },
@@ -71,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -82,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -90,10 +97,10 @@
     {
      "data": {
       "text/plain": [
-       "0.18605144060299794"
+       "0.8214966000090281"
       ]
      },
-     "execution_count": 191,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 96,
    "metadata": {
     "collapsed": false
    },
@@ -112,25 +119,225 @@
     {
      "data": {
       "text/plain": [
-       "[{0: [2], 1: [2]},\n",
-       " {0: [1], 1: [2]},\n",
-       " {0: [2], 1: [2]},\n",
-       " {0: [0], 1: [2]},\n",
-       " {0: [1], 1: [2]},\n",
-       " {0: [0], 1: [2]},\n",
-       " {0: [0], 1: [2]},\n",
-       " {0: [2], 1: [2]},\n",
-       " {0: [1], 1: [2]},\n",
-       " {0: [2], 1: [2]}]"
+       "<Game values:((1, 1), (2, 2), (3, 3)) players{0: <Defender id:0 resources:1>, 1: <StackelbergAttacker id:1 resources:1>} time_horizon:10>"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "g.history"
+    "exp.game"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Serialization"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can serialize a game in 2 different ways:\n",
+    "- with a Python pickle\n",
+    "- with json"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pickle\n",
+    "the standard Python serialiazion method"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "139787236751792"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "id(g)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Game values:((1, 1), (2, 2), (3, 3)) players{0: <Defender id:0 resources:1>, 1: <StackelbergAttacker id:1 resources:1>} time_horizon:10>"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "g.dump(\"prova_pickle\") # serialize in a file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "g2 = game.load(\"prova_pickle\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "139787237361536"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "id(g2) # different object"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Game values:((1, 1), (2, 2), (3, 3)) players{0: <Defender id:0 resources:1>, 1: <StackelbergAttacker id:1 resources:1>} time_horizon:10>"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g2 # same content"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### JSON"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "g.dumpjson(\"prova_json\") # only the encoding has been provided"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "    \"attackers\": [\n",
+      "        1\n",
+      "    ],\n",
+      "    \"defenders\": [\n",
+      "        0\n",
+      "    ],\n",
+      "    \"history\": [],\n",
+      "    \"players\": {\n",
+      "        \"0\": {\n",
+      "            \"class_name\": \"Defender\",\n",
+      "            \"feedbacks\": [],\n",
+      "            \"id\": 0,\n",
+      "            \"resources\": 1\n",
+      "        },\n",
+      "        \"1\": {\n",
+      "            \"class_name\": \"StackelbergAttacker\",\n",
+      "            \"id\": 1,\n",
+      "            \"resources\": 1\n",
+      "        }\n",
+      "    },\n",
+      "    \"strategy_history\": [],\n",
+      "    \"time_horizon\": 10,\n",
+      "    \"values\": [\n",
+      "        [\n",
+      "            1,\n",
+      "            1\n",
+      "        ],\n",
+      "        [\n",
+      "            2,\n",
+      "            2\n",
+      "        ],\n",
+      "        [\n",
+      "            3,\n",
+      "            3\n",
+      "        ]\n",
+      "    ]\n",
+      "}\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"prova_json\", mode=\"r\") as f:\n",
+    "    print(f.read())"
    ]
   },
   {
@@ -139,12 +346,12 @@
    "source": [
     "## Configuration Files\n",
     "\n",
-    "we can also set a configuration file as below"
+    "we can also use configuration files"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -155,13 +362,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "resultspath = \"/home/lorenzo/Scrivania/Polimi/Thesis/code/onlineSG/results\""
+    "resultspath = \"/home/lorenzo/Scrivania/Polimi/Thesis/code/onlineSG/results2\""
    ]
   },
   {
@@ -173,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -184,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -194,41 +401,70 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Or run a single *Batch*"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "r.batches[0].experiments[2].game.strategy_history"
+    "results = \"/home/lorenzo/Scrivania/Polimi/Thesis/code/onlineSG/results3\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "conf = \"/home/lorenzo/Scrivania/Polimi/Thesis/code/onlineSG/games/conf.csv\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "r.batches[0].experiments[2].agent.feedbacks"
+    "b = runner.Batch(conf, results)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "r.batches[0].experiments[2].game.history"
+    "b.parse_batch()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "b.run()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
    "metadata": {
     "collapsed": false
    },
@@ -236,10 +472,10 @@
     {
      "data": {
       "text/plain": [
-       "<module 'source.environment' from '../source/environment.py'>"
+       "<module 'source.environment' from '/home/lorenzo/Scrivania/Polimi/Thesis/code/onlineSG/source/environment.py'>"
       ]
      },
-     "execution_count": 195,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,17 +488,8 @@
     "reload(player)\n",
     "reload(parsers)\n",
     "reload(game)\n",
-    "reload(environment)\n"
+    "reload(environment)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
