--- a/notebooks/Example.ipynb
+++ b/notebooks/Example.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 128,
    "metadata": {
     "collapsed": true
    },
@@ -274,9 +274,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 129,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 130,
    "metadata": {
     "collapsed": false
    },
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 180,
    "metadata": {
     "collapsed": false
    },
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 181,
    "metadata": {
     "collapsed": false
    },
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 179,
    "metadata": {
     "collapsed": false
    },
@@ -475,7 +475,7 @@
        "<module 'source.environment' from '/home/lorenzo/Scrivania/Polimi/Thesis/code/onlineSG/source/environment.py'>"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 179,
      "metadata": {},
      "output_type": "execute_result"
     }
