added AWESOMS_UCB defender

--- a/notebooks/Example.ipynb
+++ b/notebooks/Example.ipynb
@@ -1,15 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Example\n",
+    "of the last added functionalities in onlineSG"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 366,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "import sys\n",
-    "# sys.path.append('../')  # uncomment to add the path to the onlineSG folder \n",
+    "sys.path.append('../')  # uncomment to add the path to the onlineSG folder \n",
     "# You have to change the path if you move this file.\n",
     "# Alternatevely add the onlineSG folder to your PYTHONPATH\n",
     "# e.g. On Linux add this line on .bashrc:\n",
@@ -19,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -30,6 +38,7 @@
     "import source.environment as environment\n",
     "import source.runner as runner\n",
     "import source.errors as errors\n",
+    "import source.parsers as parsers\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from importlib import *"
@@ -44,16 +53,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 367,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "values = ((1, 1), (2, 2), (3, 3))\n",
-    "time_horizon = 10\n",
+    "time_horizon = 1000\n",
     "g = game.Game(values, time_horizon)\n",
-    "agent = player.Defender(g, 0, 1)\n",
+    "agent = player.AWESOMS_UCB(g, 0, 1, 0.1, 0.6, 0.2)\n",
     "attacker = player.StackelbergAttacker(g, 1, 1)\n",
     "g.set_players([agent], [attacker])"
    ]
@@ -67,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 368,
    "metadata": {
     "collapsed": false
    },
@@ -78,9 +87,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 369,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -89,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 370,
    "metadata": {
     "collapsed": false
    },
@@ -97,21 +106,30 @@
     {
      "data": {
       "text/plain": [
-       "0.8214966000090281"
+       "[{0: [0.0, 0.4, 0.6], 1: [0, 0, 1]},\n",
+       " {0: [0.0, 0.4, 0.6], 1: [0, 0, 1]},\n",
+       " {0: [0.0, 0.4, 0.6], 1: [0, 0, 1]},\n",
+       " {0: [0.0, 0.4, 0.6], 1: [0, 0, 1]},\n",
+       " {0: [0.0, 0.4, 0.6], 1: [0, 0, 1]},\n",
+       " {0: [0.0, 0.4, 0.6], 1: [0, 0, 1]},\n",
+       " {0: [0.0, 0.4, 0.6], 1: [0, 0, 1]},\n",
+       " {0: [0.0, 0.4, 0.6], 1: [0, 0, 1]},\n",
+       " {0: [0.0, 0.4, 0.6], 1: [0, 0, 1]},\n",
+       " {0: [0.0, 0.4, 0.6], 1: [0, 0, 1]}]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 370,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "exp.seed"
+    "exp.game.strategy_history[-10:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 371,
    "metadata": {
     "collapsed": false
    },
@@ -119,45 +137,30 @@
     {
      "data": {
       "text/plain": [
-       "<Game values:((1, 1), (2, 2), (3, 3)) players{0: <Defender id:0 resources:1>, 1: <StackelbergAttacker id:1 resources:1>} time_horizon:10>"
+       "[{0: 0, 1: 0, 2: 0},\n",
+       " {0: 0, 1: 0, 2: 0},\n",
+       " {0: 0, 1: 0, 2: 0},\n",
+       " {0: 0, 1: 0, 2: -3},\n",
+       " {0: 0, 1: 0, 2: 0},\n",
+       " {0: 0, 1: 0, 2: -3},\n",
+       " {0: 0, 1: 0, 2: 0},\n",
+       " {0: 0, 1: 0, 2: 0},\n",
+       " {0: 0, 1: 0, 2: -3},\n",
+       " {0: 0, 1: 0, 2: -3}]"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 371,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "exp.game"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Serialization"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We can serialize a game in 2 different ways:\n",
-    "- with a Python pickle\n",
-    "- with json"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Pickle\n",
-    "the standard Python serialiazion method"
+    "exp.agent.feedbacks[-10:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 372,
    "metadata": {
     "collapsed": false
    },
@@ -165,21 +168,43 @@
     {
      "data": {
       "text/plain": [
-       "139787236751792"
+       "True"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 372,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "id(g)"
+    "agent.stackelberg"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 373,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "t = time_horizon"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 374,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "average_reward = sum([sum(f.values()) for f in agent.feedbacks]) / t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 375,
    "metadata": {
     "collapsed": false
    },
@@ -187,43 +212,21 @@
     {
      "data": {
       "text/plain": [
-       "<Game values:((1, 1), (2, 2), (3, 3)) players{0: <Defender id:0 resources:1>, 1: <StackelbergAttacker id:1 resources:1>} time_horizon:10>"
+       "-0.951"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 375,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "g"
+    "average_reward"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "g.dump(\"prova_pickle\") # serialize in a file"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 105,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "g2 = game.load(\"prova_pickle\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 378,
    "metadata": {
     "collapsed": false
    },
@@ -231,21 +234,22 @@
     {
      "data": {
       "text/plain": [
-       "139787237361536"
+       "0.11753940002383997"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 378,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "id(g2) # different object"
+    "bound = sqrt(2 * log(t) / t)\n",
+    "bound"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 365,
    "metadata": {
     "collapsed": false
    },
@@ -253,218 +257,21 @@
     {
      "data": {
       "text/plain": [
-       "<Game values:((1, 1), (2, 2), (3, 3)) players{0: <Defender id:0 resources:1>, 1: <StackelbergAttacker id:1 resources:1>} time_horizon:10>"
+       "-0.15599999999999992"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 365,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "g2 # same content"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### JSON"
+    "agent.maxmin-average_reward"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "g.dumpjson(\"prova_json\") # only the encoding has been provided"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 130,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\n",
-      "    \"attackers\": [\n",
-      "        1\n",
-      "    ],\n",
-      "    \"defenders\": [\n",
-      "        0\n",
-      "    ],\n",
-      "    \"history\": [],\n",
-      "    \"players\": {\n",
-      "        \"0\": {\n",
-      "            \"class_name\": \"Defender\",\n",
-      "            \"feedbacks\": [],\n",
-      "            \"id\": 0,\n",
-      "            \"resources\": 1\n",
-      "        },\n",
-      "        \"1\": {\n",
-      "            \"class_name\": \"StackelbergAttacker\",\n",
-      "            \"id\": 1,\n",
-      "            \"resources\": 1\n",
-      "        }\n",
-      "    },\n",
-      "    \"strategy_history\": [],\n",
-      "    \"time_horizon\": 10,\n",
-      "    \"values\": [\n",
-      "        [\n",
-      "            1,\n",
-      "            1\n",
-      "        ],\n",
-      "        [\n",
-      "            2,\n",
-      "            2\n",
-      "        ],\n",
-      "        [\n",
-      "            3,\n",
-      "            3\n",
-      "        ]\n",
-      "    ]\n",
-      "}\n"
-     ]
-    }
-   ],
-   "source": [
-    "with open(\"prova_json\", mode=\"r\") as f:\n",
-    "    print(f.read())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Configuration Files\n",
-    "\n",
-    "we can also use configuration files"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "mypath = \"/home/lorenzo/Scrivania/Polimi/Thesis/code/onlineSG/games\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "resultspath = \"/home/lorenzo/Scrivania/Polimi/Thesis/code/onlineSG/results2\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "and use the *Runner* class to run all the configuration files in a folder"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 180,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "r = runner.Runner(mypath, resultspath)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 181,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "r.run()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Or run a single *Batch*"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "results = \"/home/lorenzo/Scrivania/Polimi/Thesis/code/onlineSG/results3\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "conf = \"/home/lorenzo/Scrivania/Polimi/Thesis/code/onlineSG/games/conf.csv\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "b = runner.Batch(conf, results)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "b.parse_batch()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "b.run()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 256,
    "metadata": {
     "collapsed": false
    },
@@ -475,7 +282,7 @@
        "<module 'source.environment' from '/home/lorenzo/Scrivania/Polimi/Thesis/code/onlineSG/source/environment.py'>"
       ]
      },
-     "execution_count": 179,
+     "execution_count": 256,
      "metadata": {},
      "output_type": "execute_result"
     }
