--- a/notebooks/Run Batch.ipynb
+++ b/notebooks/Run Batch.ipynb
@@ -9,8 +9,7 @@
     }
    },
    "source": [
-    "# Example\n",
-    "of the last added functionalities in onlineSG"
+    "# Run a batch from a configuration file"
    ]
   },
   {
@@ -52,73 +51,6 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from importlib import *"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 97,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "values = ((1, 1), (2, 2), (3, 3))\n",
-    "time_horizon = 100\n",
-    "g = game.Game(values, time_horizon)\n",
-    "# agent = defenders.FABULOUS(g,0,1,0,0.5,0.5)\n",
-    "#experts = [base_defenders.FixedActionDefender(g,0,0),\n",
-    "#           base_defenders.FixedActionDefender(g,0,1),\n",
-    "#           base_defenders.FixedActionDefender(g,0,2)]\n",
-    "#agent = base_defenders.ExpertDefender(g,0,1,1,experts)\n",
-    "agent = base_defenders.UnknownStochasticDefender(g, 0)\n",
-    "attacker = attackers.StackelbergAttacker(g, 1)\n",
-    "#attacker = attackers.StochasticAttacker(g, 1, 1,0,0.6,0.4)\n",
-    "g.set_players([agent], [attacker])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 98,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "c = runner.Configuration(g, \"u_stochastic\", print_results=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 88,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "for i in range(1000):\n",
-    "    c.run_an_experiment()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 89,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'avg_total_rewards': -120.626, 'avg_weak_regret': 10.134}"
-      ]
-     },
-     "execution_count": 89,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "c.stats"
    ]
   },
   {
